<resources>
    <string name="app_name">parcial1test</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lblNombre">Enter your username</string>
    <string name="btnSave">Save</string>
    <string name="invalidMessage">The validation failed!!!</string>
    <string name="lblAdministrador">Administrator</string>
    <string name="administrator">Administrator</string>
    <string name="suscriber">Suscriber</string>
    <string name="lblTipo">Type</string>
    <string name="lblPassword">Password</string>
    <string name="lblRepeatPassword">Repeat password</string>
    <string name="hintRepetirContrasenia">Repeat Password</string>
    <string name="hintContrasenia">Password</string>
    <string name="hintNombre">Username</string>
    <string name="volver">Return</string>
    <string name="view">View</string>
</resources>