<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <!-- views hijos -->


    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/hintNombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />


        <TextView
            android:id="@+id/lblContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/txtContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintContrasenia"
            android:inputType="textPassword"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/lblRepetirContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRepeatPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/txtRepetirContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintRepetirContrasenia"
            android:inputType="textPassword"
            android:textColorHint="#8D6E63"
            tools:ignore="Autofill,TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lblTipo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbtAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/administrator" />

                <RadioButton
                    android:id="@+id/rbtSusucriptor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suscriber" />
            </RadioGroup>
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@mipmap/ic_launcher"
                android:text="@string/btnSave"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </FrameLayout>

    </LinearLayout>